<resources>
    <string name="app_name">Time Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_new_plan">Add New Plan</string>
    <string name="add_plan">Add Plan</string>
    <string name="update_plan">Update Plan</string>
    <string name="update_plan_info">UPDATE PLAN</string>
    <string name="add_plan_info">ADD PLAN</string>

    <string name="plan_s_title">Plan\'s Title</string>
    <string name="time_for_plan">Time for Plan</string>
    <string name="empty">empty</string>
    <string name="title_toast_message">Please check the plan title.</string>
    <string name="time_toast_message">Please check the plan time.</string>
    <string name="room_toast_message">Please try later</string>
    <string name="successful_toast_message">Successful!</string>
    <string name="infomation_toast_message">Please enter the time in minutes</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="error">Error</string>
    <string name="succesful">Successful</string>
    <string name="please_enter_the_plans">Please Enter New the Plans</string>
    <string name="show_all_plans">Show All Plans</string>
    <string name="done">Done!</string>
    <string name="homework">Homework</string>
    <string name="_45_00">45:00</string>
    <string name="name_is_not_null">name is not be null</string>
    <string name="name_is_not_empty">name is not be empty</string>
    <string name="time_is_not_null">time is not be null</string>
    <string name="time_is_not_empty">time is not be empty</string>
    <string name="time_is_not_equals_zero">time is not be equals zero</string>
    <string name="please_try_again_later">please try again later</string>
    <string name="alert">Alert!</string>
    <string name="do_you_want_to_delete_this_plan">Do you want to delete this plan?</string>
    <string name="alert_dialog_delete_all_message">Do you want to delete all plans?</string>
    <string name="search">Search</string>
    <string name="time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="item_type">Item Type</string>
    <string name="all_item">All Item</string>
    <string name="is_favorite">Is Favorite</string>
    <string name="is_not_favorite">Is Not Favorite</string>
    <string name="sortedby">SortedBy</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>

    <string name="saved">Saved</string>
    <string name="updated">Updated</string>
    <string name="deleted">Deleted</string>
    <string name="title_error">please check title!</string>
    <string name="time_error">please check time!</string>
    <string name="time_zero_error">time can not be 0!</string>
    <string name="default_error">please try again later</string>
    <string name="info_for_time">"Please enter the time in minutes (e.g., 45 minutes)."</string>
    <string name="start_time_end_time">Start time and End Time can not be empty</string>
    <string name="not_bigger">Start Time can not be bigger than End Time</string>
    <string name="count_down_timer">Count Down Timer</string>
    <string name="_00_00">00:00</string>
    <string name="time_can_not_be_empty">time can not be empty</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="back_page">back page</string>
    <string name="time_start">time start</string>
    <string name="time_stop">time stop</string>
    <string name="time_reset">time reset</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="on_boarding">onBoarding</string>
    <string name="finished">finished</string>
    <string name="on_boarding_3">You can use it for a specific period of time when you want to work.</string>
    <string name="on_boarding_2">You can check how long you have been working.</string>
    <string name="on_boarding_1">You can save the work schedules you frequently use and easily work on the same plan.</string>
    <string name="filter_list">filter list</string>
    <string name="delete_all_item">delete all items</string>
    <string name="delete_item">delete item</string>
    <string name="update_item">update item</string>
    <string name="add_favorite">add favorite</string>
</resources>