<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filter_screen.FilterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            app:cardCornerRadius="12dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/md_theme_light_secondaryContainer"
            android:paddingBottom="16dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTimeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputStartTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                app:hintTextColor="@color/md_theme_light_primary"
                android:textColorHint="@color/md_theme_light_onSurfaceVariant"
                app:boxStrokeColor="@color/md_theme_light_primary"
                android:hint="@string/start_time"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTimeInfo"
                app:startIconDrawable="@drawable/baseline_access_time_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/start_time"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEndTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:hintTextColor="@color/md_theme_light_primary"
                android:textColorHint="@color/md_theme_light_onSurfaceVariant"
                app:boxStrokeColor="@color/md_theme_light_primary"
                android:layout_margin="16dp"
                android:hint="@string/end_time"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputStartTime"
                app:startIconDrawable="@drawable/baseline_access_time_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/end_time"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewTime">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@color/md_theme_light_secondaryContainer"
                    android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewItemTypeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/item_type"
                    android:textColor="@color/md_theme_light_onSurface"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <CheckBox
                    android:id="@+id/checkBoxAllItem"
                    style="@style/CheckBoxStyle"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/all_item"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewItemTypeInfo" />

                <CheckBox
                    android:id="@+id/checkBoxIsFavoriteItem"
                    style="@style/CheckBoxStyle"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/is_favorite"
                    app:layout_constraintStart_toEndOf="@id/checkBoxAllItem"
                    app:layout_constraintTop_toBottomOf="@id/textViewItemTypeInfo" />

                <CheckBox
                    android:id="@+id/checkBoxIsNotFavoriteItem"
                    style="@style/CheckBoxStyle"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/is_not_favorite"
                    app:layout_constraintStart_toEndOf="@id/checkBoxIsFavoriteItem"
                    app:layout_constraintTop_toBottomOf="@id/textViewItemTypeInfo" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSortedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            app:cardCornerRadius="12dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewType">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/md_theme_light_secondaryContainer"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSortedByInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/sortedby"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:id="@+id/radioGroupSortedBy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSortedByInfo">

                <RadioButton
                    android:id="@+id/radioButtonDesc"
                    style="@style/RadioButtonStyle"
                    android:text="@string/descending" />

                <RadioButton
                    android:id="@+id/radioButtonAsc"
                    style="@style/RadioButtonStyle"
                    android:text="@string/ascending" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonReset"
                style="@style/ButtonSquareStyle"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toStartOf="@id/buttonCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewSortedBy" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                style="@style/ButtonSquareStyle"
                android:layout_marginTop="32dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@id/buttonApply"
                app:layout_constraintStart_toEndOf="@id/buttonReset"
                app:layout_constraintTop_toBottomOf="@id/cardViewSortedBy" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonApply"
                style="@style/ButtonSquareStyle"
                android:text="@string/apply"
                android:textAllCaps="false"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonCancel"
                app:layout_constraintTop_toBottomOf="@id/cardViewSortedBy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>