<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail_plan_screen.DetailPlanFragment">

    <ImageButton
        android:id="@+id/imageButtonBack"
        style="@style/ButtonCircleStyle"
        android:contentDescription="@string/back_page"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/buttonDelete"
            style="@style/ButtonCircleStyle"
            android:contentDescription="@string/delete_item"
            android:src="@drawable/baseline_delete_24"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/buttonUpdate"
            style="@style/ButtonCircleStyle"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/update_item"
            android:src="@drawable/baseline_create_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonDelete"/>

        <ImageButton
            android:id="@+id/imageButtonFavorite"
            style="@style/ButtonCircleStyle"
            android:contentDescription="@string/add_favorite"
            android:src="@drawable/baseline_star_border_24"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonUpdate"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            app:cardCornerRadius="12dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageButtonFavorite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/md_theme_light_secondaryContainer"
            android:paddingVertical="16dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                tools:ignore="MissingConstraints"
                app:trackColor="@color/md_theme_light_background"
                app:indicatorColor="@color/md_theme_light_primary"
                android:progress="0"
                android:rotation="0"
                app:indicatorDirectionCircular="counterclockwise"
                app:indicatorSize="250dp"
                app:trackThickness="16dp"
                android:layout_marginTop="8dp"
                app:trackCornerRadius="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle"/>


            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="40sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@id/progressIndicator"
                app:layout_constraintBottom_toBottomOf="@id/progressIndicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/imageButtonStartTimer"
                style="@style/ButtonCircleStyle"
                android:contentDescription="@string/start_time"
                android:src="@drawable/baseline_play_arrow_24"
                android:layout_marginTop="32dp"
                android:layout_marginStart="48dp"
                app:layout_constraintEnd_toStartOf="@id/imageButtonStopTimer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressIndicator" />


            <ImageButton
                android:id="@+id/imageButtonStopTimer"
                style="@style/ButtonCircleStyle"
                android:contentDescription="@string/time_stop"
                android:src="@drawable/baseline_pause_24"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toEndOf="@id/imageButtonStartTimer"
                app:layout_constraintEnd_toStartOf="@id/imageButtonResetTimer"
                app:layout_constraintTop_toBottomOf="@id/progressIndicator"/>

            <ImageButton
                android:id="@+id/imageButtonResetTimer"
                style="@style/ButtonCircleStyle"
                android:contentDescription="@string/time_reset"
                android:src="@drawable/baseline_cached_24"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintStart_toEndOf="@id/imageButtonStopTimer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressIndicator"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>