<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    tools:context=".ui.add_screen.AddFragment">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:background="@drawable/back_ground_circle_button"
        android:backgroundTint="@color/md_theme_light_primary"
        android:contentDescription="@string/back_page"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add_new_plan"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/imageButtonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageButtonBack"
        app:layout_constraintTop_toTopOf="@id/imageButtonBack" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/md_theme_light_secondaryContainer"
            android:background="@drawable/back_ground_rectangle"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageButtonBack">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/plan_s_title"
                android:textColorHint="@color/md_theme_light_onSurfaceVariant"
                app:boxStrokeColor="@color/md_theme_light_primary"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:helperText="required*"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/md_theme_light_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/baseline_title_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/plan_s_title"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputTime"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/time_for_plan"
                android:textColorHint="@color/md_theme_light_onSurfaceVariant"
                app:boxStrokeColor="@color/md_theme_light_primary"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:endIconDrawable="@drawable/baseline_question_mark_24"
                app:endIconMode="custom"
                app:helperText="required*"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/md_theme_light_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputTitle"
                app:startIconDrawable="@drawable/baseline_access_time_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/time_for_plan"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/buttonAddOrUpdatePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_ground_rectangle_button"
        android:backgroundTint="@color/md_theme_light_primary"
        android:textColor="@color/md_theme_light_background"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_plan"
        app:layout_constraintEnd_toEndOf="@id/constraint"
        app:layout_constraintTop_toBottomOf="@id/constraint" />

</androidx.constraintlayout.widget.ConstraintLayout>